mainsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-svc
spec:
  selector:
    app: todo-api
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 8070
  type: NodePort
